# Doc/swagger.yaml
@@ -9,9 +9,10 @@ info:
 servers:
   - url: 'http://localhost:5000'
     description: Local server
-
+  - url: 'https://smartwaste-back-end.onrender.com'
+    description: Deployed server on Render
 paths:
-  /SmartWaste/user/signup:
+  /smartWaste/user/signup:
     post:
       summary: User registration
       description: Register a new user
@@ -59,7 +60,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /SmartWaste/user/signin:
+  /smartWaste/user/signin:
     post:
       summary: User login
       description: Login a user
@@ -101,12 +102,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /SmartWaste/user/listAll:
+  /smartWaste/user/listAll:
     get:
       summary: Get all users
       description: Retrieve a list of all users
       tags:
         - Users
+      security:
+        - BearerAuth: []
       responses:
         '200':
           description: Successfully retrieved list of users
@@ -123,12 +126,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /SmartWaste/user/updateUserProfile/{id}:
+  /smartWaste/user/updateUserProfile/{id}:
     patch:
       summary: Update user by ID
       description: Update a user profile by ID
       tags:
         - Users
+      security:
+        - BearerAuth: []
       parameters:
         - name: id
           in: path
@@ -136,6 +141,13 @@ paths:
           description: ID of the user to be updated
           schema:
             type: string
+      requestBody:
+        description: User object that needs to be updated
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
       responses:
         '200':
           description: Successfully updated user profile
@@ -156,12 +168,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /SmartWaste/user/findUserProfile/{id}:
+  /smartWaste/user/findUserProfile/{id}:
     get:
       summary: Find user by ID
       description: Retrieve a user profile by ID
       tags:
         - Users
+      security:
+        - BearerAuth: []
       parameters:
         - name: id
           in: path
@@ -189,12 +203,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /SmartWaste/user/deleteUser/{id}:
+  /smartWaste/user/deleteUser/{id}:
     delete:
       summary: Delete user by ID
       description: Delete a user profile by ID
       tags:
         - Users
+      security:
+        - BearerAuth: []
       parameters:
         - name: id
           in: path
@@ -228,6 +244,8 @@ paths:
       description: Create a new waste collection route with specified details.
       tags:
         - Routes
+      security:
+        - BearerAuth: []
       requestBody:
         required: true
         content:
@@ -248,62 +266,11 @@ paths:
       description: Fetch all available waste collection routes.
       tags:
         - Routes
-       
+      security:
+        - BearerAuth: []
       responses:
         '200':
           description: List of all waste collection routes
-          content:
-            application/json:
-              schema:
-                type: String
-                items:
-                  $ref: '#/components/schemas/Route'
-        '401':
-          description: Unauthorized (Token is missing or invalid)
-        '500':
-          description: Server error (Unable to fetch routes)
-
-  /smartWaste/route/getRouteById/{id}:
-    get:
-      summary: Get  waste collection routes
-      description: Fetch  waste collection routes by id.
-      tags:
-        - Routes
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: ID of Route  
-      responses:
-        '200':
-          description: waste collection routes
-          content:
-            application/json:
-              schema:
-                type: String
-                items:
-                  $ref: '#/components/schemas/Route'
-        '401':
-          description: Unauthorized (Token is missing or invalid)
-        '500':
-          description: Server error (Unable to fetch routes) 
-        '404':
-          description: Not Found (Unable to fetch routes) 
-
-  /smartWaste/route/getRouteByName/{route_name}:
-    get:
-      summary: Get  waste collection routes
-      description: Fetch  waste collection routes by route name.
-      tags:
-        - Routes
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: Name of the rout to be fetched  
-      responses:
-        '200':
-          description: waste collection routes
           content:
             application/json:
               schema:
@@ -313,20 +280,147 @@ paths:
         '401':
           description: Unauthorized (Token is missing or invalid)
         '500':
-          description: Server error (Unable to fetch routes) 
+          description: Server error (Unable to fetch routes)
+
+  /smartWaste/route/getRouteById/{id}:
+    get:
+      summary: Get waste collection routes
+      description: Fetch waste collection routes by id.
+      tags:
+        - Routes
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of Route
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Waste collection route
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Route'
+        '401':
+          description: Unauthorized (Token is missing or invalid)
+        '500':
+          description: Server error (Unable to fetch routes)
         '404':
-          description: Not Found (Unable to fetch routes)        
+          description: Not Found (Unable to fetch routes)
 
+  /smartWaste/route/getRouteByName/{route_name}:
+    get:
+      summary: Get waste collection routes
+      description: Fetch waste collection routes by route name.
+      tags:
+        - Routes
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: route_name
+          in: path
+          required: true
+          description: Name of the route to be fetched
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Waste collection route
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Route'
+        '401':
+          description: Unauthorized (Token is missing or invalid)
+        '500':
+          description: Server error (Unable to fetch routes)
+        '404':
+          description: Not Found (Unable to fetch routes)
 
+  /smartWaste/route/updateRoute/{id}:
+    patch:
+      summary: Update Route
+      description: Update waste collection route by id
+      tags:
+        - Routes
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the route to be updated
+          schema:
+            type: string
+      requestBody:
+        description: Route object that needs to be updated
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Route'
+      responses:
+        '200':
+          description: Route updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Route'
+        '401':
+          description: Unauthorized (Token is missing or invalid)
+        '404':
+          description: Not Found (Route does not exist)
+        '500':
+          description: Server error (Unable to update route)
+
+  /smartWaste/route/deleteRoute/{id}:
+    delete:
+      summary: Delete Route
+      description: Delete a waste collection route by id
+      tags:
+        - Routes
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the route to be deleted
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Route deleted successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Route'
+        '401':
+          description: Unauthorized (Token is missing or invalid)
+        '404':
+          description: Not Found (Route does not exist)
+        '500':
+          description: Server error (Unable to delete route)
 
 components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     User:
       type: object
       properties:
-        name:
+        id:
           type: string
-          example: "Fab"
+          example: "12345"
+        FullName:
+          type: string
+          example: "fab"
         email:
           type: string
           example: "fab@gmail.com"
@@ -336,42 +430,27 @@ components:
         phone_number:
           type: string
           example: "0789635342"
-        user_type:
+    Route:
+      type: object
+      properties:
+        id:
           type: string
-          example: "Resident"
-
+          example: "12345"
+        route_name:
+          type: string
+          example: "Kiyovu"
+        area_covered:
+          type: string
+          example: "Nyarugenge sector"
+        collection_days:
+          type: array
+          example: ["Monday", "Thursday"]
+        waste_collector_id:
+          type: string
+          example: "54321"
     Error:
       type: object
       properties:
         message:
           type: string
-          example: "Error message here"
-
-    Route:
-      type: object
-      properties:
-        route_name:
-          type: string
-          example: "kiyovu"
-        area_covered:
-          type: string
-          example: "Nyarugenge sector"
-        collection_days:
-          type: string
-          example: "Monday, Thursday"
-        vehicle_id:
-          type: string
-          example: "abc123"
-        status:
-          type: string
-          enum:
-            - Active
-            - Inactive
-          example: "Active"
-
-    RouteError:
-      type: object
-      properties:
-        message:
-          type: string
-          example: "Error message here"
+          example: "Error message"
