# Route/wasteCollectionRoute.js
@@ -1,6 +1,6 @@
 import express from 'express'
 import{createRouteValidation} from "../Utils/validation.js"
-import{createRoute,getAllRoute,getRouteDetails,findRouteByName} from "../controller/routeController.js"
+import{createRoute,getAllRoute,getRouteDetails,findRouteByName,deleteRoute,updateRoute} from "../controller/routeController.js"
 
 import{authenticateToken} from "../Middleware/authethicateToken.js";
 
@@ -9,6 +9,8 @@ route.post("/addRoute",createRouteValidation,createRoute);
 route.get("/allRoute",authenticateToken,getAllRoute)
 route.get("/getRouteById/:id",authenticateToken,getRouteDetails)
 route.get("/getRouteByName/:route_name",authenticateToken,findRouteByName)
+route.patch("/updateRoute/:id",authenticateToken,updateRoute)
+route.delete("/deleteRoute/:id",authenticateToken,deleteRoute)
 
 
 
